--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,37 +8,67 @@ services:
       - ./data/freepbx:/data
       - ./data/certs:/certs
       - ./data/logs:/var/log/asterisk
+      - ../scripts:/scripts
     ports:
-      - "80:80"       # Web interface
-      - "443:443"     # Web interface (SSL)
+      # Web interface (HTTP/HTTPS)
+      - "8080:80"       # Web interface - Changed to 8080 to avoid conflicts with local web servers
+      - "8443:443"     # Web interface (SSL) - Changed to 8443 to avoid conflicts
+      # SIP Protocol (UDP/TCP)
       - "5060:5060/udp" # SIP
       - "5060:5060/tcp" # SIP
+      # RTP Media ports
       - "10000-10100:10000-10100/udp" # RTP ports
+      # IAX2 Protocol (optional)
+      - "4569:4569/udp" # IAX2 protocol
+      # PJSIP Protocol (optional)
+      - "5061:5061/tcp" # SIP-TLS
+    env_file:
+      - ../passwords/passwords.env
     environment:
+      # Database settings
       - DB_EMBEDDED=TRUE
+      - DB_ROOT_PASS=${MYSQL_ROOT_PASSWORD}
+      - DB_PASS=${MYSQL_PASSWORD}
+      - DB_USER=${MYSQL_USER}
+      - DB_NAME=${MYSQL_DATABASE}
+      # Admin credentials
+      - ADMIN_USER=${FREEPBX_ADMIN_USER}
+      - ADMIN_PASSWORD=${FREEPBX_ADMIN_PASSWORD}
+      # System settings
       - ENABLE_CRON=TRUE
       - ENABLE_SMTP=FALSE
-      - SMTP_HOST=smtp.example.com
-      - SMTP_PORT=587
-      - SMTP_FROM=hazel@example.com
-      - SMTP_USER=${FREEPBX_ADMIN_USER}
-      - SMTP_PASS=${FREEPBX_ADMIN_PASSWORD}
       - TZ=America/New_York
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/admin/config.php"]
+      interval: 60s
+      timeout: 10s
+      retries: 5
+    networks:
+      - hazel-network
     
   hazel-tts:
-    image: alpine:latest
+    build:
+      context: ../
+      dockerfile: docker/Dockerfile.tts
     container_name: hazel-tts
     volumes:
-      - ./data/tts:/app
-      - ../scripts:/scripts
+      - ./data/tts:/app/data
+      - ./data/logs:/app/logs
+      - ../scripts:/app/scripts
+    ports:
+      - "5000:5000"   # Expose the STT/TTS API service
+    env_file:
+      - ../passwords/passwords.env
     environment:
+      - PYTHONUNBUFFERED=1
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
-    command: /bin/sh -c "echo 'TTS service placeholder - will be replaced with actual implementation' && sleep infinity"
     depends_on:
       - freepbx
     restart: unless-stopped
+    networks:
+      - hazel-network
 
 networks:
-  default:
-    name: hazel-network
+  hazel-network:
+    driver: bridge
